force-app/main/default/objects/Account/fields/aa__c.field-meta.xml
<CustomField>
    <fullName>aa__c</fullName>
    <label>aa</label>
    <length>60</length>
    <type>Text</type>
</CustomField>