force-app/main/default/objects/Account/fields/abc__c.field-meta.xml
<CustomField>
    <fullName>abc__c</fullName>
    <label>abc</label>
    <length>60</length>
    <type>Text</type>
</CustomField>