force-app/main/default/objects/Account/fields/dddd__c.field-meta.xml
<CustomField>
    <fullName>dddd__c</fullName>
    <label>dddd</label>
    <length>60</length>
    <type>Text</type>
</CustomField>