force-app/main/default/objects/Account/fields/demo1__c.field-meta.xml
<CustomField>
    <fullName>demo1__c</fullName>
    <label>demo1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>