force-app/main/default/objects/Account/fields/demo2__c.field-meta.xml
<CustomField>
    <fullName>demo2__c</fullName>
    <label>demo2</label>
    <length>60</length>
    <type>Text</type>
</CustomField>