force-app/main/default/objects/Account/fields/demo3__c.field-meta.xml
<CustomField>
    <fullName>demo3__c</fullName>
    <label>demo3</label>
    <length>60</length>
    <type>Text</type>
</CustomField>