force-app/main/default/objects/Account/fields/demo_field__c.field-meta.xml
<CustomField>
    <fullName>demo_field__c</fullName>
    <label>demo field</label>
    <length>60</length>
    <type>Text</type>
</CustomField>