force-app/main/default/objects/Account/fields/eeeeee__c.field-meta.xml
<CustomField>
    <fullName>eeeeee__c</fullName>
    <label>eeeeee</label>
    <length>60</length>
    <type>Text</type>
</CustomField>