force-app/main/default/objects/Account/fields/Guru_Test2__c.field-meta.xml
<CustomField>
    <fullName>Guru_Test2__c</fullName>
    <label>Guru Test2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>