force-app/main/default/objects/Account/fields/test_field11__c.field-meta.xml
<CustomField>
    <fullName>test_field11__c</fullName>
    <label>test_field11</label>
    <type>TextArea</type>
</CustomField>