force-app/main/default/objects/Account/fields/test_field2__c.field-meta.xml
<CustomField>
    <fullName>test_field2__c</fullName>
    <label>test_field2</label>
    <type>TextArea</type>
</CustomField>