force-app/main/default/objects/Account/fields/test_field3__c.field-meta.xml
<CustomField>
    <fullName>test_field3__c</fullName>
    <label>test_field3</label>
    <type>TextArea</type>
</CustomField>