force-app/main/default/objects/Account/fields/Test_guru1__c.field-meta.xml
<CustomField>
    <fullName>Test_guru1__c</fullName>
    <label>Test-guru1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>