force-app/main/default/objects/Account/fields/work_item_1_test__c.field-meta.xml
<CustomField>
    <fullName>work_item_1_test__c</fullName>
    <label>work item 1 test</label>
    <length>10</length>
    <type>Text</type>
</CustomField>